--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
 <head><title></title></head>
-<body><p></p>Hola {usuario}</body>
+<body><p>Hola{usuario}</p></body>
 </html>
