--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
-<head><title></title></head>
-<body><p></p>Hola {usuario}</body>
+<head><title>TITULO</title></head>
+<body><p></p>Hola Fer</body>
 </html>
